--- a/src/main/resources/segGroupCW/dashboard.fxml
+++ b/src/main/resources/segGroupCW/dashboard.fxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXRadioButton?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.ToggleGroup?>
@@ -19,9 +19,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXRadioButton?>
-<AnchorPane stylesheets="@css/theme.css" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="952.0" prefWidth="938.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="segGroupCW.DashboardController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="952.0" prefWidth="938.0" stylesheets="@css/theme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="segGroupCW.DashboardController">
    <children>
       <VBox fx:id="campaignVBox" layoutX="1.0" layoutY="100.0" prefHeight="848.0" prefWidth="151.0" spacing="20.0">
          <children>
@@ -30,11 +28,11 @@
                   <Font name="Verdana Bold" size="12.0" />
                </font>
             </Label>
-            <JFXButton styleClass="btn-primary" fx:id="campaign1Button" mnemonicParsing="false"  text="Campaign 1" >
+            <JFXButton fx:id="campaign1Button" mnemonicParsing="false" styleClass="btn-primary" text="Campaign 1">
 
             </JFXButton>
             <Separator prefWidth="200.0" />
-            <JFXButton styleClass="btn-primary" fx:id="campaign2Button" mnemonicParsing="false" text="Campaign 2">
+            <JFXButton fx:id="campaign2Button" mnemonicParsing="false" styleClass="btn-primary" text="Campaign 2">
 
             </JFXButton>
             <Separator prefWidth="200.0" />
@@ -50,9 +48,9 @@
          <children>
             <Pane prefHeight="100.0" prefWidth="246.0">
                <children>
-                  <Label styleClass="text-primary" fx:id="dashBoardLabel" layoutX="-80.0" layoutY="15.0" prefHeight="70.0" prefWidth="285.0" text="Dashboard">
+                  <Label fx:id="dashBoardLabel" layoutX="-80.0" layoutY="15.0" prefHeight="70.0" prefWidth="285.0" styleClass="text-primary" text="Dashboard">
                      <font>
-                        <Font  name="Verdana" size="48.0" />
+                        <Font name="Verdana" size="48.0" />
                      </font>
                   </Label>
                </children></Pane>
@@ -67,7 +65,7 @@
             </Pane>
             <Pane prefHeight="100.0" prefWidth="220.0">
                <children>
-                  <JFXButton styleClass="btn-submit" fx:id="changeCampaignButton" layoutX="72.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchToPrimary" prefHeight="25.0" prefWidth="123.0" text="Change Campaign" />
+                  <JFXButton fx:id="changeCampaignButton" layoutX="72.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchToPrimary" prefHeight="25.0" prefWidth="123.0" styleClass="btn-submit" text="Change Campaign" />
                   <JFXButton fx:id="filterButton" layoutX="75.0" layoutY="46.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="117.0" text="Filter">
                      <graphic>
                         <ImageView fitHeight="49.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
@@ -102,7 +100,7 @@
                                           <Font name="Verdana Bold" size="12.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="value1" layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="527, 920" textAlignment="CENTER">
+                                    <Label fx:id="noImprLabel" layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="527, 920" textAlignment="CENTER">
                                        <font>
                                           <Font name="System Bold" size="33.0" />
                                        </font>
@@ -119,7 +117,7 @@
                                           <Font name="Verdana Bold" size="12.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="value2" layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="20, 569" textAlignment="CENTER">
+                                    <Label fx:id="noClicksLabel" layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="20, 569" textAlignment="CENTER">
                                        <font>
                                           <Font name="System Bold" size="33.0" />
                                        </font>
@@ -136,7 +134,7 @@
                                           <Font name="Verdana Bold" size="12.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="value3" layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="13, 702" textAlignment="CENTER">
+                                    <Label fx:id="noUniqueLabel" layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="13, 702" textAlignment="CENTER">
                                        <font>
                                           <Font name="System Bold" size="33.0" />
                                        </font>
@@ -153,7 +151,7 @@
                                           <Font name="Verdana Bold" size="12.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="value4" layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="8, 401">
+                                    <Label fx:id="noBounceLabel" layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="8, 401">
                                        <font>
                                           <Font name="System Bold" size="33.0" />
                                        </font>
@@ -179,7 +177,7 @@
                                           <Font name="Verdana Bold" size="12.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="value5" layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="4, 591" textAlignment="CENTER">
+                                    <Label fx:id="noConversionLabel" layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="4, 591" textAlignment="CENTER">
                                        <font>
                                           <Font name="System Bold" size="33.0" />
                                        </font>
@@ -196,7 +194,7 @@
                                           <Font name="Verdana Bold" size="12.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="value6" layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="567, 920" textAlignment="CENTER">
+                                    <Label fx:id="totalCostLabel" layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="567, 920" textAlignment="CENTER">
                                        <font>
                                           <Font name="System Bold" size="33.0" />
                                        </font>
@@ -213,7 +211,7 @@
                                           <Font name="Verdana Bold" size="12.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="value61" layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="567, 920" textAlignment="CENTER">
+                                    <Label fx:id="ctrLabel" layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="567, 920" textAlignment="CENTER">
                                        <font>
                                           <Font name="System Bold" size="33.0" />
                                        </font>
@@ -230,7 +228,7 @@
                                           <Font name="Verdana Bold" size="12.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="value62" layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="567, 920" textAlignment="CENTER">
+                                    <Label fx:id="cpaLabel" layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="567, 920" textAlignment="CENTER">
                                        <font>
                                           <Font name="System Bold" size="33.0" />
                                        </font>
@@ -247,7 +245,7 @@
                                           <Font name="Verdana Bold" size="12.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="value63" layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="567, 920" textAlignment="CENTER">
+                                    <Label fx:id="cpcLabel" layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="567, 920" textAlignment="CENTER">
                                        <font>
                                           <Font name="System Bold" size="33.0" />
                                        </font>
@@ -264,7 +262,7 @@
                                           <Font name="Verdana Bold" size="12.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="value64" layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="567, 920" textAlignment="CENTER">
+                                    <Label fx:id="cpmLabel" layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="567, 920" textAlignment="CENTER">
                                        <font>
                                           <Font name="System Bold" size="33.0" />
                                        </font>
@@ -281,7 +279,7 @@
                                           <Font name="Verdana Bold" size="12.0" />
                                        </font>
                                     </Label>
-                                    <Label fx:id="value65" layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="567, 920" textAlignment="CENTER">
+                                    <Label fx:id="bounceRateLabel" layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="567, 920" textAlignment="CENTER">
                                        <font>
                                           <Font name="System Bold" size="33.0" />
                                        </font>
