--- a/src/main/resources/segGroupCW/css/theme.css
+++ b/src/main/resources/segGroupCW/css/theme.css
@@ -3,11 +3,12 @@
     -primary: #5988FF;
     -secondary: white;
     -text-primary: #5988FF;
-    -text-secodary: #63788F;
+    -text-secondary: #63788F;
     -success: #55CF5A;
     -error: red;
     -fx-background-color: -main-bg-color;
     -fx-font-size: 12px;
+    -fx-text-fill: -text-secondary;
 
 }
 .primary{
@@ -25,4 +26,16 @@
 .btn-submit{
     -fx-background-color: -success;
     -fx-text-fill: -secondary;
+}
+
+.card{
+    -fx-background-color: -secondary;
+    -fx-background-radius: 15%;
+    -fx-border-radius: 15%;
+    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);
+}
+
+.card-corners{
+    -fx-background-color: -secondary;
+    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);
 }
