--- a/src/main/resources/segGroupCW/graphView.fxml
+++ b/src/main/resources/segGroupCW/graphView.fxml
@@ -1,15 +1,174 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXRadioButton?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="601.0" prefWidth="693.0" spacing="20.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="segGroupCW.GraphController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="952.0" prefWidth="938.0" stylesheets="@css/theme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="segGroupCW.DashboardController">
    <children>
-      <Button fx:id="primaryButton" onAction="#switchToSecondary" text="Switch to Secondary View" />
-      <Label text="Primary View" />
+      <VBox fx:id="campaignVBox" layoutX="1.0" layoutY="100.0" prefHeight="848.0" prefWidth="151.0" spacing="20.0" style="-fx-background-color: #5988FF;">
+         <children>
+            <Label fx:id="campaignLabel" prefHeight="34.0" prefWidth="151.0" text="  CAMPAIGNS">
+               <font>
+                  <Font name="Verdana Bold" size="12.0" />
+               </font>
+            </Label>
+            <JFXButton fx:id="campaign1Button" mnemonicParsing="false" styleClass="btn-primary" text="Campaign 1">
+
+            </JFXButton>
+            <Separator prefWidth="200.0" />
+            <JFXButton fx:id="campaign2Button" mnemonicParsing="false" styleClass="btn-primary" text="Campaign 2">
+
+            </JFXButton>
+            <Separator prefWidth="200.0" />
+         </children>
+         <padding>
+            <Insets bottom="20.0" top="20.0" />
+         </padding>
+         <effect>
+            <DropShadow />
+         </effect>
+      </VBox>
+      <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="938.0" style="-fx-background-color: 5988FF;">
+         <children>
+            <Pane prefHeight="100.0" prefWidth="246.0">
+               <children>
+                  <Label fx:id="dashBoardLabel" layoutX="-80.0" layoutY="15.0" prefHeight="70.0" prefWidth="285.0" styleClass="text-primary" text="Dashboard">
+                     <font>
+                        <Font name="Verdana" size="48.0" />
+                     </font>
+                  </Label>
+               </children></Pane>
+            <Pane fx:id="topHBox" prefHeight="100.0" prefWidth="370.0">
+               <children>
+                  <Label layoutX="130.0" layoutY="36.0" prefHeight="17.0" prefWidth="176.0" text="Campaign 1" textFill="#fffefe">
+                     <font>
+                        <Font name="Verdana" size="22.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
+            <Pane prefHeight="100.0" prefWidth="220.0">
+               <children>
+                  <JFXButton fx:id="changeCampaignButton" layoutX="72.0" layoutY="14.0" mnemonicParsing="false" onAction="#switchToPrimary" prefHeight="25.0" prefWidth="123.0" styleClass="btn-submit" text="Change Campaign" />
+               </children>
+            </Pane>
+         </children>
+         <effect>
+            <DropShadow />
+         </effect>
+      </HBox>
+      <Pane layoutX="174.0" layoutY="109.0" prefHeight="404.0" prefWidth="752.0" style="-fx-background-color: #5bc0be;">
+         <children>
+            <LineChart layoutX="12.0" layoutY="14.0" prefHeight="371.0" prefWidth="727.0" title="No of Impressions">
+              <xAxis>
+                <CategoryAxis side="BOTTOM" />
+              </xAxis>
+              <yAxis>
+                <NumberAxis side="LEFT" />
+              </yAxis>
+            </LineChart>
+         </children>
+      </Pane>
+      <HBox alignment="CENTER_LEFT" layoutX="175.0" layoutY="524.0" prefHeight="70.0" prefWidth="752.0" spacing="20.0" style="-fx-background-color: #5bc0be;">
+         <children>
+            <Label alignment="CENTER" prefHeight="70.0" prefWidth="147.0" text="Time">
+               <font>
+                  <Font size="26.0" />
+               </font>
+            </Label>
+            <JFXRadioButton text="Hours">
+               <toggleGroup>
+                  <ToggleGroup fx:id="timeToggle" />
+               </toggleGroup>
+            </JFXRadioButton>
+            <JFXRadioButton text="Days" toggleGroup="$timeToggle" />
+            <JFXRadioButton text="Weeks" toggleGroup="$timeToggle" />
+            <JFXRadioButton text="Months" toggleGroup="$timeToggle" />
+         </children>
+         <padding>
+            <Insets left="10.0" right="10.0" />
+         </padding>
+      </HBox>
+      <HBox alignment="CENTER_LEFT" layoutX="175.0" layoutY="682.0" prefHeight="201.0" prefWidth="752.0" spacing="10.0" style="-fx-background-color: #5bc0be;">
+         <padding>
+            <Insets left="70.0" right="10.0" />
+         </padding>
+         <children>
+            <VBox prefHeight="201.0" prefWidth="143.0" spacing="10.0">
+               <children>
+                  <Label contentDisplay="CENTER" prefHeight="17.0" prefWidth="151.0" text="Gender" />
+                  <JFXRadioButton text="Female">
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                  </JFXRadioButton>
+                  <JFXRadioButton text="Male" />
+               </children>
+               <padding>
+                  <Insets left="10.0" top="10.0" />
+               </padding>
+            </VBox>
+            <VBox prefHeight="201.0" prefWidth="143.0" spacing="10.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="138.0" text="Age" />
+                  <JFXRadioButton text="&lt; 25 years" />
+                  <JFXRadioButton text="25 - 34 years" />
+                  <JFXRadioButton text="35 - 44 years" />
+                  <JFXRadioButton text="45 - 54 years" />
+                  <JFXRadioButton text="&gt; 54 years" />
+               </children>
+               <padding>
+                  <Insets left="10.0" top="10.0" />
+               </padding>
+            </VBox>
+            <VBox prefHeight="201.0" prefWidth="143.0" spacing="10.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="133.0" text="Income" />
+                  <JFXRadioButton text="Low" />
+                  <JFXRadioButton text="Medium" />
+                  <JFXRadioButton text="High" />
+               </children>
+               <padding>
+                  <Insets left="10.0" top="10.0" />
+               </padding>
+            </VBox>
+            <VBox prefHeight="201.0" prefWidth="143.0" spacing="10.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="143.0" text="Context" />
+                  <JFXRadioButton text="Blog" />
+                  <JFXRadioButton text="News" />
+                  <JFXRadioButton text="Shopping" />
+                  <JFXRadioButton text="Social Media" />
+                  <JFXRadioButton text="News" />
+               </children>
+               <padding>
+                  <Insets left="10.0" top="10.0" />
+               </padding>
+            </VBox>
+         </children>
+      </HBox>
+      <HBox alignment="CENTER" layoutX="175.0" layoutY="636.0" prefHeight="46.0" prefWidth="752.0" style="-fx-background-color: #5bc0be;">
+         <children>
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="34.0" prefWidth="280.0" text="Comparison" textAlignment="CENTER">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
+
    </children>
-   <padding>
-      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-   </padding>
-</VBox>
+</AnchorPane>
