--- a/src/main/resources/segGroupCW/dashboard.fxml
+++ b/src/main/resources/segGroupCW/dashboard.fxml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.chart.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXRadioButton?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="952.0" prefWidth="938.0" stylesheets="@css/theme.css, @css/dashboard.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="segGroupCW.DashboardController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="938.0" stylesheets="@css/theme.css, @css/dashboard.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="segGroupCW.DashboardController">
    <children>
       <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="938.0">
          <children>
@@ -40,9 +50,9 @@
             </Pane>
          </children>
       </HBox>
-      <BorderPane layoutY="120.0" prefHeight="831.0" prefWidth="152.0">
+      <BorderPane layoutY="120.0" prefWidth="152.0">
          <center>
-            <VBox fx:id="campaignVBox" alignment="TOP_CENTER" prefHeight="848.0" prefWidth="151.0" spacing="20.0" BorderPane.alignment="CENTER">
+            <VBox fx:id="campaignVBox" alignment="TOP_CENTER" prefWidth="151.0" spacing="20.0" BorderPane.alignment="CENTER">
                <children>
       <!--            <Label fx:id="campaignLabel" prefHeight="34.0" prefWidth="151.0" text="  CAMPAIGNS">-->
       <!--               <font>-->
@@ -65,7 +75,7 @@
             </VBox>
          </bottom>
       </BorderPane>
-      <ScrollPane layoutX="152.0" layoutY="100.0" prefHeight="848.0" prefWidth="787.0">
+      <ScrollPane layoutX="152.0" layoutY="100.0" prefHeight="780.0" prefWidth="787.0">
          <content>
             <VBox prefHeight="1144.0" prefWidth="788.0">
                <children>
@@ -241,7 +251,7 @@
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </padding>
                         </VBox>
-                        <VBox layoutX="170.0" layoutY="-3.0" prefHeight="1855.0" prefWidth="616.0" spacing="20.0">
+                        <VBox layoutX="170.0" layoutY="-3.0" prefWidth="616.0" spacing="20.0">
                            <children>
                               <Pane prefHeight="147.0" prefWidth="504.0" styleClass="card-corners">
                                  <children>
